# spbu_ml_sem4

./: pyproject.toml  requirements.dev.txt  requirements.txt
.github/workflows/: main.yaml
VDA/: titanic_vda.ipynb
src/homeworks/EDA/: titanic_eda.ipynb
src/homeworks/KNN/: cancer.ipynb  task.docx
src/homeworks/KNN/KDTree/: KDTHeap.py  KDTNode.py  KDTree.py
src/homeworks/KNN/KNNClassifier/: KNNClassifier.py
src/homeworks/KNN/cancer/: cancer.ipynb
src/homeworks/KNN/kdt_tree/: kd_tree.py  kdt_Heap.py  kdt_heap.py  kdt_node.py
src/homeworks/KNN/knn_classifier/: KNNClassifier.py  knn_classifier.py
src/homeworks/KNN/knn_tree/: KDTHeap.py  KDTNode.py  KDTree.py
src/homeworks/KNN/processing/: data_split.py  metrics.py
src/homeworks/KNN/processing/scaling_strategies/: abstract_scaler.py  max_abs_scaler.py  min_max_scaler.py  standard_scaler.py
src/homeworks/KNN/spam/: spam.ipynb
src/homeworks/clustering/: clustering.ipynb
src/homeworks/ensembles/: ensembles.ipynb
src/homeworks/ensembles/catboost_info/: catboost_training.json  learn_error.tsv  time_left.tsv
src/homeworks/gradient_descent/: gradient_descent.ipynb
src/homeworks/linear_regression/: linreg.ipynb  predict.csv
src/homeworks/texts/: texts.ipynb
tests/KNN/: default_knn.py  test_KDTree.py  test_knn_classifier.py
tests/KNN/kdt_tree/: test_kd_tree.py  test_kdt_heap.py  test_kdt_node.py
tests/KNN/processing/: test_data_split.py  test_metrics.py
tests/KNN/processing/scaling_strategies/: test_max_abs_scaler.py  test_min_max_scaler.py  test_standart_scaler.py
(+1 files in other folders)
