[metadata]
name = "spbu_ml_sem4"
author = "Artem_Romanyuk"
url = "https://github.com/wrdxwrdxwrdx/spbu_ml_sem4"

[tool.isort]
profile = "black"
line_length = 120

[tool.black]
line-length = 120

[tool.mypy]
files = ["src"]
install_types = "True"
non_interactive = "True"
ignore_missing_imports = "True"
show_error_codes = "True"
warn_redundant_casts = "True"
warn_unused_configs = "True"
warn_unused_ignores = "True"
allow_redefinition = "True"
warn_no_return = "False"
no_implicit_optional = "False"

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = ["--color=yes", "-s"]